# MotionCore

./: .gitignore  .gitmodules  CMakeLists.txt  MotionCore.sln  MotionCore.vcxproj  MotionCore.vcxproj.filters  README.md
MotionCore/: .gitignore  CMakeLists.txt  MotionCore.sln  MotionCore.vcxproj  MotionCore.vcxproj.filters
MotionCore/Include/: MotionCoreHeader.h
MotionCore/Include/Core/: BodyIntegrator.hpp  MotionCoreAllocator.hpp  MotionCoreEngine.hpp  RigidBody.hpp
MotionCore/Include/DataStructures/: AABBTree.hpp
MotionCore/Include/Math/: Complex.hpp  Matrix2x2.hpp  Matrix3x3.hpp  Matrix4x4.hpp  MatrixTransformation.hpp  Quaternion.hpp  ToolBox.hpp  ToolBoxTypeDef.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
MotionCore/Include/Primitive/: AABB.hpp  OBB.hpp  RayCast.hpp  Sphere.hpp  Triangle.hpp
MotionCore/Inline/Math/: Matrix2x2.inl  Matrix4x4.inl  MatrixTransformation.inl  Quaternion.inl  Vector3.inl  Vector4.inl
MotionCore/Inline/data_structure/: aabb_tree.inl
MotionCore/Inline/math/: matrix3x3.inl  matrix_transformation.inl  vector4.inl
MotionCore/MotionCore/: MotionCore.vcxproj.filters
MotionCore/MotionCore/include/: motion_core_header.h
MotionCore/MotionCore/include/algo/: algo_typedef.hpp  collision.h
MotionCore/MotionCore/include/math/: matrix3x3.hpp  toolbox.hpp  toolbox_headerfile.hpp  toolbox_typedef.hpp  utils.hpp  vector3.hpp  vector4.hpp
MotionCore/MotionCore/source/algo/: quick_hull.cpp
MotionCore/MotionCoreSamples/: MotionCoreSamples.vcxproj  MotionCoreSamples.vcxproj.filters
MotionCore/MotionCoreSamples/include/: App.h
MotionCore/MotionCoreSamples/source/: App.cpp
MotionCore/Source/Core/: BodyIntegrator.cpp  MotionCoreAllocator.cpp  MotionCoreEngine.cpp
MotionCore/Source/DataStructure/: AABBTree.cpp
MotionCore/include/: MotionCoreHeader.h  PhysicMaterial.h  motion_core_header.h  motion_core_typedef.h  physic_material.h  primitive.h  primitive_type_def.h
MotionCore/include/algo/: collision.h  primitive_test.h
MotionCore/include/body/: Body.h  Circle.h
MotionCore/include/core/: MotionCoreAllocator.h  PhysicsEngine.h  PhysicsHelper.hpp  collision_detector.hpp  collision_solver.h  debug_output.h  integrator.hpp  motion_core_allocator.h  motion_core_engine.hpp  physics_engine.h  physics_helper.hpp
MotionCore/include/math/: matrix3x3.hpp  matrix4x4.hpp  matrix_transformation.hpp  quaternion.hpp  toolbox_typedef.hpp  utils.hpp  vector2.hpp  vector3.hpp  vector4.hpp
MotionCore/include/primitive/: axis_aligned_bounding_box.h  oriented_bounding_box.h  primitive.h  sphere.h
MotionCore/include/spatial_partitioning/: bonding_volume_hierarchy.cpp  bonding_volume_hierarchy.h  bonding_volume_hierarchyAABB.h  spatial_partitioning_typedef.h
MotionCore/source/: MotionCoreAllocator.cpp  PhysicsEngine.cpp  PhysicsHelper.cpp  motion_core_allocator.cpp  physics_engine.cpp  physics_helper.cpp
MotionCore/source/algo/: primitive_test.cpp
MotionCore/source/core/: collision_detector.cpp  collision_solver.cpp  integrator.cpp  motion_core_allocator.cpp  motion_core_engine.cpp  physics_engine.cpp
MotionCore/source/math/: simd_operation.cpp  utils.cpp
MotionCore/source/primitive/: capsule.cpp  oriented_bounding_box.cpp  primitive.cpp
MotionCore/src/include/: motion_core_header.h
MotionCore/src/include/core/: body_integrator.hpp  motion_core_allocator.hpp  motion_core_engine.hpp  rigid_body.hpp
MotionCore/src/include/data_structure/: aabb_tree.hpp
MotionCore/src/include/math/: complex.hpp  matrix2x2.hpp  matrix2x2_transformation.hpp  matrix3x3.hpp  matrix4x4.hpp  matrix_transformation.hpp  quaternion.hpp  toolbox.hpp  toolbox_headerfile.hpp  toolbox_typedef.hpp  vector2.hpp  vector3.hpp  vector4.hpp
MotionCore/src/include/primitive/: aabb.hpp  obb.hpp  ray_cast.hpp  sphere.hpp  triangle.hpp
MotionCore/src/inline/math/: matrix2X2_transformation.inl  matrix2x2.inl  matrix3x3.inl  matrix4x4.inl  matrix_transformation.inl  quaternion.inl  vector2.inl  vector3.inl  vector4.inl
MotionCore/src/source/core/: body_integrator.cpp  motion_core_allocator.cpp  motion_core_engine.cpp
MotionCore/src/source/data_structure/: aabb_tree.cpp
MotionCoreSample/: CMakeLists.txt  main.cpp
MotionCoreSample/src/include/: camera.h  mesh.h  renderer.h  shader.cpp  shader.h  window.hpp
MotionCoreSample/src/source/: camera.cpp  renderer.cpp  shader.cpp  window.cpp
MotionCoreSamples/: imgui.ini
MotionCoreSamples/source/: main.cpp
UnitTest/: CMakeLists.txt  Matrix2X2.cpp  Vector2Test.cpp  main.cpp  matrix2x2_test.cpp  matrix3x3_test.cpp  matrix4x4_test.cpp  quaternion_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp
include/: motion_core_typedef.h
include/algo/: algo_typedef.hpp  quick_hull.hpp
include/core/: collision_detector.hpp  collision_solver.h  integrator.hpp  motion_core_allocator.h  physics_helper.hpp
include/math/: matrix_transformation.hpp  simd_operation.h  toolbox_headerfile.hpp  vector2.hpp  vector3.hpp
include/primitive/: capsule.h
source/algo/: collision.cpp  primitive_test.cpp
source/core/: debug_output.cpp  integrator.cpp  motion_core_allocator.cpp  physics_engine.cpp  physics_helper.cpp
source/primitive/: axis_aligned_bounding_box.cpp  sphere.cpp
source/spatial_partitioning/: bonding_volume_hierarchyAABB.cpp
